--- a/data/uberchick-tree-view.in.ui
+++ b/data/uberchick-tree-view.in.ui
@@ -45,8 +45,6 @@
       <column type="gchararray"/>
       <!-- column-name STRING_RCPT -->
       <column type="gchararray"/>
-      <!-- column-name GINT_SELECTED_INDEX -->
-      <column type="gint"/>
       <!-- column-name GINT_LIST_STORE_INDEX -->
       <column type="gint"/>
       <!-- column-name GBOOLEAN_UNREAD -->
@@ -54,6 +52,8 @@
       <!-- column-name GBOOLEAN_RETWEET -->
       <column type="gboolean"/>
       <!-- column-name GCHARARRY_RETWEETED_BY -->
+      <column type="gchararray"/>
+      <!-- column-name STRING_SEXY_STATUS_UPDATE -->
       <column type="gchararray"/>
     </columns>
   </object>
@@ -81,6 +81,19 @@
                     <property name="label" translatable="yes">_Refresh</property>
                     <property name="use_underline">True</property>
                     <property name="stock_id">gtk-refresh</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="uberchick_tree_view_mark_as_read_tool_button">
+                    <property name="visible">True</property>
+                    <property name="tooltip_markup">&lt;i&gt;Mark all updates as having been read.&lt;/i&gt;</property>
+                    <property name="label" translatable="yes">Mark _as Read</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-clear</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -403,20 +416,43 @@
     <child>
       <object class="GtkToolbar" id="uberchick_tree_view_tab_toolbar">
         <property name="visible">True</property>
-        <property name="tooltip_markup">&lt;b&gt;Close this tab&lt;/b&gt;</property>
         <property name="show_arrow">False</property>
         <property name="icon_size">1</property>
         <property name="icon_size_set">True</property>
         <child>
           <object class="GtkToolButton" id="uberchick_tree_view_tab_close_tool_button">
             <property name="visible">True</property>
+            <property name="tooltip_markup">&lt;b&gt;Close this tab&lt;/b&gt;</property>
             <property name="label" translatable="yes">_Close</property>
             <property name="use_underline">True</property>
             <property name="stock_id">gtk-close</property>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="homogeneous">True</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkToolButton" id="uberchick_tree_view_tab_refresh_tool_button">
+            <property name="visible">True</property>
+            <property name="tooltip_markup">Reload all updates in this tab.</property>
+            <property name="label" translatable="yes">_Refresh</property>
+            <property name="use_underline">True</property>
+            <property name="stock_id">gtk-refresh</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkToolButton" id="uberchick_tree_view_tab_mark_as_read_tool_button">
+            <property name="visible">True</property>
+            <property name="tooltip_markup">&lt;i&gt;Mark all updates as read.&lt;/i&gt;</property>
+            <property name="label" translatable="yes">Mark _as Read</property>
+            <property name="use_underline">True</property>
+            <property name="stock_id">gtk-clear</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
           </packing>
         </child>
       </object>
